--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>my resume</title>
   <link rel="stylesheet" href="style.css">
-  <link  href="/path/to/jquery.fancybox.min.css" rel="stylesheet">
+  <link href="/path/to/jquery.fancybox.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=cyrillic,cyrillic-ext"
     rel="stylesheet">
 </head>
@@ -52,6 +52,15 @@
             <span class="word_tech_skills">JavaScript</span></li>
           <li class="tech_skills_item">
             <span class="word_tech_skills">Node.js</span></li>
+          <li class="tech_skills_item">
+            <span class="word_tech_skills">jQuery</span></li>
+          <li class="tech_skills_item">
+            <span class="word_tech_skills">SCSS</span></li>
+          <li class="tech_skills_item">
+            <span class="word_tech_skills">GULP</span></li>
+
+
+
         </ul>
       </div>
 
@@ -118,8 +127,20 @@
           <li>
             <a class="project__link" href="https://inna12018.github.io/index/">Moderno</a>
           </li>
-
         </ol>
+
+        <ul class="dots">
+          <li><a href="file:///C:/Users/38097/Desktop/repository/moderno-page2/about.html">About US</a></li>
+          <li><a href="https://inna12018.github.io/profile/profile.html">Profile Page</a></li>
+          <li><a href="https://inna12018.github.io/settings/settings.html">Settings</a></li>
+          <li><a href="https://inna12018.github.io/upload/upload.html">Upload Product</a></li>
+          <li><a href="https://inna12018.github.io/withdrawals/withdrawals">withdrawals</a></li>
+          <li><a href="https://inna12018.github.io/new-items/new-items.html">Product Page</a></li>
+          <li><a href="https://inna12018.github.io/contacts/contacts.html">Contact With Us</a></li>
+          <li><a href="file:///C:/Users/38097/Desktop/repository/moderno-page1/404.html">404</a></li>
+
+        </ul>
+
 
         <p class="projects_type">JS GAME</p>
         <ol class="numbers">
@@ -147,78 +168,61 @@
           <span class="Date">October 2018 - up to now <span class="stick">|</span> Ukraine</span>
           <ul class="about_me_many_text_2">
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Posting debits and credits
             </li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Risus commodo viverra maecenas.</li>
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+              Recording financial transactions.</li>
+            <li>
+              Maintaining and balancing ledgers, accounts, and subsidiaries
             </li>
+            <li>
+              Managing payroll
+            </li>
+
           </ul>
         </div>
 
-        <!--Company 2-->
+
+        <!--- Education conteiner -->
 
         <div>
-          <h4 class="Company">Economist <span class="Company_orange">Logistic forklift</span></h4>
-          <span class="Date">September 2013 - July 2017 <span class="stick">|</span> Ukraine</span>
-          <ul class="about_me_many_text_2">
-            <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod labore et dolore magna aliqua.
-            </li>
-            <li>Quis ipsum suspendisse ultrices gravida.</li>
-            <li>Risus commodo viverra maecenas.</li>
-          </ul>
+          <h3 class="projects_word">Education</h3>
+          <h4 class="Company_orange">Dnipro National Metallurgical Academy of Ukraine</h4>
+          <h5 class="for_word_frontent">Ecologist</h5>
+          <p class="data">September 2006-May 20012</p>
         </div>
 
-        <!--Company 3-->
+        <section class="education">
+          <div class="container">
+            <div class="certifications">Certifications</div>
+            <ul>
+              <li class="certifications__link">SoftServe <p>HTML5/ CSS3/ JavaScript Fundamentals</p>
+              </li>
+              <li class="certifications__link">From 0 to 1 <p>Markup developer</p>
+              </li>
+            </ul>
+            <div class="certifications__inner">
 
-        <div>
-          <h4 class="Company">Economist <span class="Company_orange">Alef</span></h4>
-          <span class="Date">November 2006 - May 2013 <span class="stick">|</span> Ukraine</span>
-          <ul class="about_me_many_text_2">
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Quis ipsum suspendisse ultrices gravida.</li>
-            <li>Risus commodo viverra maecenas.</li>
-          </ul>
-        </div>
-      </div>
+              <div class="certifications__item">
+                <a data-fancybox="gallery" href="images/study-1.jpg">
+                  <img src="images/study-small-1.jpg">
+                </a>
+              </div>
 
-      <!--- Education conteiner -->
+              <div class="certifications__item-2">
+                <a data-fancybox="gallery" href="images/study-2.jpg">
+                  <img src="images/study-small-2.jpg">
+                </a>
+              </div>
 
-      <div>
-        <h3 class="projects_word">Education</h3>
-        <h4 class="Company_orange"> * Dnipro National Metallurgical Academy of Ukraine</h4>
-        <h5 class="for_word_frontent">Ecologist</h5>
-      </div>
-
-      <section class="education">
-        <div class="container">
-          <div class="certifications">Certifications</div>
-          <div class="certifications__inner">
-
-            <div class="certifications__item">
-            <a data-fancybox="gallery" href="images/study-1.jpg">
-              <img src="images/study-small-1.jpg">
-          </a>
-        </div>
-
-        <div class="certifications__item-2">
-          <a data-fancybox="gallery" href="images/study-2.jpg">
-              <img src="images/study-small-2.jpg">
-          </a>
             </div>
-
           </div>
-        </div>
 
-      </section>
+        </section>
 
 
+      </div>
     </div>
-  </div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
