--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
         </ol>
 
         <ul class="dots">
-          <li><a href="file:///C:/Users/38097/Desktop/repository/moderno-page2/about.html">About US</a></li>
+          <li><a href="https://inna12018.github.io/moderno-page2/about.html">About US</a></li>
           <li><a href="https://inna12018.github.io/profile/profile.html">Profile Page</a></li>
           <li><a href="https://inna12018.github.io/settings/settings.html">Settings</a></li>
           <li><a href="https://inna12018.github.io/upload/upload.html">Upload Product</a></li>
           <li><a href="https://inna12018.github.io/withdrawals/withdrawals">withdrawals</a></li>
           <li><a href="https://inna12018.github.io/new-items/new-items.html">Product Page</a></li>
           <li><a href="https://inna12018.github.io/contacts/contacts.html">Contact With Us</a></li>
-          <li><a href="file:///C:/Users/38097/Desktop/repository/moderno-page1/404.html">404</a></li>
+          <li><a href="https://inna12018.github.io/moderno-page1/404.html">404</a></li>
 
         </ul>
 
