--- a/index.html
+++ b/index.html
@@ -197,8 +197,24 @@
             <div class="certifications">Certifications</div>
             <ul>
               <li class="certifications__link">SoftServe <p>HTML5/ CSS3/ JavaScript Fundamentals</p>
+                <p class="certifications">Knowlege</p>
+                <ul class="skils">
+                  <li>create websites using the HTML5/CSS3 and latest edition of JavaScript - ES2020</li>
+                  <li>use the features specific to JS such as closing, prototype imitation and writing of asynchronous code</li>
+                  <li>create a responsive page layout that adapts to different devices using the most trending technologies - CSS FlexBox and CSS Grid Layout</li>
+                  <li>work with the DOM page model, respond to events, generate dynamic content, and interact with the backend using Ajax and Fetch technologies</li>
+                  <li>write a semantic code in HTML5, create structured and correctly formed pages that pass HTML and CSS validators</li>
+                  <li>write selectors in CSS</li>
+                  <li>solve practical challenges in web development by using basic JavaScript language constructs</li>
+                  <li>differentiate between the current version of JavaScript and its classic ES5 edition</li>
+                </ul>
               </li>
               <li class="certifications__link">From 0 to 1 <p>Markup developer</p>
+                <p class="certifications">Knowlege</p>
+                <li>Front End Frameworks</li>
+                <li>CSS Preprocessors</li>
+                <li>Cross-Browser Development</li>
+                <li>Gulp</li>           
               </li>
             </ul>
             <div class="certifications__inner">
